--- a/config/lovelace/views/07-settings.yaml
+++ b/config/lovelace/views/07-settings.yaml
@@ -9,14 +9,12 @@
       cards:
         - type: markdown
           content: |
-            # Configuration
+            ### Configuration
           style: |
             ha-card {
-               height: 20px;
-               --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
-               box-shadow: 2px 2px rgba(0,0,0,0.0);
-            }
-            h1 {
+              height: 20px;
+              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
               font-weight: bold;
               font-family: Helvetica;
@@ -24,14 +22,12 @@
             }
         - type: markdown
           content: |
-            # Various settings for automations & co.
+            **Various settings for automations & co.**
           style: |
             ha-card {
-             height: 50px;
-             --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
-             box-shadow: 2px 2px rgba(0,0,0,0.0);
-            }
-            h1 {
+              height: 50px;
+              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
               font-family: Helvetica;
@@ -147,14 +143,12 @@
                   - height: 60px
         - type: markdown
           content: |
-            # Vacuum automation
+            **Vacuum automation**
           style: |
             ha-card {
-             height: 50px;
-             --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
-             box-shadow: 2px 2px rgba(0,0,0,0.0);
-            }
-            h1 {
+              height: 50px;
+              --paper-card-background-color: 'rgba(11, 11, 11, 0.00)';
+              box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 14px;
               font-weight: thin;
               font-family: Helvetica;
@@ -183,12 +177,6 @@
                   name: Main schedule
                   entities:
                     - entity: input_datetime.vacuum_schedule_1_from
-                      name: false
-                - type: custom:multiple-entity-row
-                  entity: input_datetime.vacuum_schedule_2_to
-                  name: Afternoon schedule
-                  entities:
-                    - entity: input_datetime.vacuum_schedule_2_from
                       name: false
                 - entity: input_boolean.vacuum_weekends
                   name: Vacuum on weekends/holidays
